fix text and icon spacing on desktop

--- a/css/base.css
+++ b/css/base.css
@@ -141,6 +141,7 @@ svg.iconSmall {
     line-height: 1.0em;
     margin-left: 12%;
     max-width: 80%;
+    margin-top: 100px;
 }
 
 h1.name {
@@ -288,6 +289,7 @@ a.btnEmail:hover {
 .iconCenter {
     grid-area: main;
     place-self: center;
+    margin-top: -150px;
 }
 
 svg.iconLarge {
